Renamed the projects namespaces

--- a/CurrencyRatesApi/CurrencyRatesApi/CurrencyRates.WebAPI.csproj
+++ b/CurrencyRatesApi/CurrencyRatesApi/CurrencyRates.WebAPI.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AssemblyName>CurrencyRates.WebAPI</AssemblyName>
+    <RootNamespace>CurrencyRates.WebAPI</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
