Final minor fixes

--- a/CurrencyRatesApi/CurrencyRatesApi/appsettings.Development.json
+++ b/CurrencyRatesApi/CurrencyRatesApi/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "XmlDocument": {
+    "Url": "https://www.ecb.europa.eu/stats/eurofxref/eurofxref-daily.xml"
   }
 }
