--- a/CurrencyRatesApi/CurrencyRatesApi/appsettings.json
+++ b/CurrencyRatesApi/CurrencyRatesApi/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "XmlDocument": {
+    "Url": "https://www.ecb.europa.eu/stats/eurofxref/eurofxref-daily.xml"
+  },
   "AllowedHosts": "*"
 }
